# payload-expo-tauri

./: .gitignore  AGENTS.md  SKILLS.md  UI_PARITY_AUDIT.md
memory-bank/: 001_context.md  002_target-architecture.md  003_schema-and-codegen.md  004_admin-core-web-tauri.md  005_mobile-expo.md  006_component-translation.md  007_testing-and-rollout.md  008_progress-log.md  009_desktop-menu.md  010_tauri-ui-chrome-debug.md  011_local-db-sqlite-storage.md  012_websocket-sync.md  013_ui-patterns.md  014_native-payload-codegen-and-sync.md
payload-main/scripts/: delete-recursively.js
payload_universal/: README.md  package.json  tsconfig.base.json
payload_universal/tools/admin-schema-gen/: package.json
payload_universal/tools/native-component-codegen/: package.json
spacedrive-main/: Cargo.toml
spacedrive-main/.github/workflows/: ci.yml  core_tests.yml  release.yml  server.yml
spacedrive-main/core/: Cargo.toml
spacedrive-main/core/src/: lib.rs
spacedrive-main/xtask/src/: main.rs
test_app/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
test_app/apps/desktop-tauri/: README.md  package.json
test_app/apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
test_app/apps/desktop-tauri/src-tauri/capabilities/: default.json
test_app/apps/desktop-tauri/src-tauri/src/: main.rs
test_app/apps/mobile-expo/: .gitignore  App.tsx  README.md  app.json  babel.config.js  eas.json  jest.config.js  metro.config.js  package.json  (+1 more)
test_app/scripts/: patch-payload-exports.mjs
test_app/tests/: server-files.test.ts  tauri-config.test.ts
(+91 files in other folders)
